<resources>
    <string name="app_name">CoPlate</string>
    <string name="week_days">Дни недели</string>
    <string name="settings">Настройки</string>
    <string name="today_menu">Меню на сегодня</string>
    <string name="meal_breakfast">Завтрак</string>
    <string name="meal_lunch">Обед</string>
    <string name="meal_dinner">Ужин</string>
    <string name="add_custom_dish">Мои блюда</string>
    <string name="library_dishes">Библиотека блюд</string>
    <string name="add_meal_dish">Добавить блюдо</string>
    <string name="add_dish_dialog_title">Добавить блюдо</string>
    <string name="suggestion_add_ingredients">После добавления блюда предложим добавить все необходимые ингредиенты в список покупок.</string>
    <string name="nav_today">День</string>
    <string name="nav_shopping">Покупки</string>
    <string name="nav_family">Семья</string>
    <string name="nav_library">Каталог</string>
    <string name="login">Войти</string>
    <string name="Authorization">Авторизация</string>
    <string name="Registration">Регистрация</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Удалить</string>
    <string name="shopping_list">Список покупок</string>
    <string name="edit_list">Редактировать</string>
    <string name="add">Добавить</string>
    <string name="enter">Введите название товара</string>
    <string name="search_dish">Поиск блюда...</string>
    <string name="my_dishes_title">Мои блюда</string>
    <string name="add_new_dish">Добавить новое блюдо</string>
    <string name="dish_name_hint">Название блюда</string>
    <string name="dish_ingredients_hint">Ингредиенты через запятую</string>
    <string name="dish_description_hint">Описание блюда (необязательно)</string>
    <string name="dish_ingredients_section">Ингредиенты</string>
    <string name="dish_description_section">Описание</string>
    <string name="dish_no_ingredients">Ингредиенты не указаны</string>
    <string name="dish_no_description">Описание не указано</string>
    <string name="close">Закрыть</string>
    <string name="planned_dish_to_shopping">К покупкам</string>
    <string name="family_owner_crown">Владелец семьи</string>
    <string name="remove_dish_from_plan">Удалить</string>
    <string name="dish_removed_from_plan">Блюдо убрано из меню</string>
    <string name="dish_remove_from_plan_failed">Не удалось удалить блюдо из плана</string>
    <string name="loading_dish_details">Загрузка…</string>
    <string name="add_to_plan">Добавить в план</string>
    <string name="pick_day_of_week">День недели</string>
    <string name="pick_meal_type">Приём пищи</string>
    <string name="add_to_plan_action">Добавить</string>
    <string name="catalog_load_failed">Не удалось загрузить библиотеку блюд</string>
    <string name="catalog_dish_open_failed">Не удалось открыть блюдо</string>
    <string name="save_dish">Сохранить блюдо</string>
    <string name="back">Назад</string>
    <string name="menu_for_monday">Меню на понедельник</string>
    <string name="menu_for_tuesday">Меню на вторник</string>
    <string name="menu_for_wednesday">Меню на среду</string>
    <string name="menu_for_thursday">Меню на четверг</string>
    <string name="menu_for_friday">Меню на пятницу</string>
    <string name="menu_for_saturday">Меню на субботу</string>
    <string name="menu_for_sunday">Меню на воскресенье</string>
    <string name="family_required_for_plan">Войдите в семью, чтобы пользоваться меню на неделю</string>
    <string name="week_menu_cleared">Меню на неделю очищено</string>
    <string name="clear_week_menu_dialog_title">Очистить меню на неделю?</string>
    <string name="clear_week_menu_dialog_message">Все запланированные блюда на все дни будут удалены. Это действие нельзя отменить.</string>
    <string name="clear_week_menu_confirm">Очистить</string>
    <string name="could_not_clear_menu">Не удалось очистить меню</string>
    <string name="network_error_simple">Ошибка сети: </string>
    <string name="could_not_add_dish_to_plan">Блюдо сохранено, не удалось добавить в меню дня</string>
    <string name="dish_saved_to_my_dishes">Блюдо сохранено в «Мои блюда». Чтобы добавить его в меню на день, нажмите на блюдо в списке.</string>
    <string name="need_meal_context_for_plan">Откройте экран через кнопку «Мои блюда» у приёма пищи на дне</string>
    <string name="dish_added_to_meal">Блюдо добавлено в меню</string>
    <string name="dish_add_to_plan_failed">Не удалось добавить блюдо в меню</string>
    <!---->
    <string name="create_family">Создайте семью или присоединитесь к уже существующей</string>
    <string name="family_my_family_fallback">Моя семья</string>
    <string name="Family">Семья</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_ingredients_to_shopping">В список покупок</string>
    <string name="ingredients_added_to_shopping">Добавлено в список покупок: %d</string>
    <string name="ingredients_to_shopping_failed">Не удалось добавить ингредиенты в список</string>
    <string name="no_ingredients_to_add_shopping">В блюде нет ингредиентов для списка</string>
    <string name="delete_dish_dialog_title">Удалить блюдо?</string>
    <string name="delete_dish_confirm_message">Удалить «%s» из моих блюд? Действие нельзя отменить.</string>
    <string name="dish_deleted">Блюдо удалено</string>
    <string name="dish_delete_failed">Не удалось удалить блюдо</string>


</resources>
