<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/edit"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/edit_list"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shopping_list"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#1F2A24"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toEndOf="@id/editButton"
            app:layout_constraintEnd_toStartOf="@id/settingsButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/editButton"/>


        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:padding="4dp"
            android:src="@drawable/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>



    <!-- Панель добавления (видна в режиме редактирования) -->
        <LinearLayout
            android:id="@+id/addPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/editButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/plus"
                android:padding="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add" />

            <EditText
                android:id="@+id/addItemInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:hint="@string/enter"
                android:textSize="14sp"
                android:textColor="#1F2A24"
                android:textColorHint="#9E9E9E"
                android:background="@android:color/transparent"
                android:imeOptions="actionDone"
                android:inputType="text" />
        </LinearLayout>

    <!-- Список покупок -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shoppingListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:clipToPadding="false"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/addPanel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

